--- a/debian/rules
+++ b/debian/rules
@@ -13,4 +13,14 @@
 	dh $@ 
 
 override_dh_auto_configure:
+# LTO breaks with tsreader
 	dh_auto_configure -- -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=1
+
+override_dh_strip:
+	dh_strip --dbg-package=xbmc-pvr-mediaportal-tvserver-dbg
+
+override_dh_auto_install:
+	dh_auto_install --destdir=debian/xbmc-pvr-mediaportal-tvserver
+
+override_dh_installdocs:
+	dh_installdocs --link-doc=xbmc-pvr-mediaportal-tvserver
