--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,13 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR})
 
 enable_language(CXX)
 
-find_package(xbmc REQUIRED)
-find_package(xbmcplatform REQUIRED)
+find_package(kodi REQUIRED)
+find_package(kodiplatform REQUIRED)
 find_package(TinyXML REQUIRED)
 
-include_directories(${xbmcplatform_INCLUDE_DIRS}
+include_directories(${KODIPLATFORM_INCLUDE_DIRS}
                     ${TINYXML_INCLUDE_DIR}
-                    ${XBMC_INCLUDE_DIR}
+                    ${KODI_INCLUDE_DIR}
                     ${PROJECT_SOURCE_DIR}/src)
 add_definitions(-D__STDC_FORMAT_MACROS)
 if (NOT WIN32)
@@ -33,7 +33,7 @@ set(MPTV_SOURCES src/Cards.cpp
 
 add_subdirectory(src/lib/tsreader)
 
-set(DEPLIBS ${xbmcplatform_LIBRARIES}
+set(DEPLIBS ${KODIPLATFORM_LIBRARIES}
             ${TINYXML_LIBRARIES} tsreader)
 
 build_addon(pvr.mediaportal.tvserver MPTV DEPLIBS)
